[gd_scene load_steps=17 format=3 uid="uid://bbjbm8mfopl45"]

[ext_resource type="Script" path="res://Scripts/gaster_blaster.gd" id="2_fmef2"]
[ext_resource type="Texture2D" uid="uid://c7lckuhb8fett" path="res://Resources/Sprites/Attacks/Gaster Blaster/Default.png" id="2_mfxnm"]
[ext_resource type="Texture2D" uid="uid://cmhanq8pitj1c" path="res://Resources/Sprites/Attacks/Gaster Blaster/Fire0.png" id="4_3y8f7"]
[ext_resource type="Texture2D" uid="uid://b6v7si5c5b7bd" path="res://Resources/Sprites/Attacks/Gaster Blaster/Fire1.png" id="5_2rrxl"]
[ext_resource type="Texture2D" uid="uid://c3dxodbbrq1ea" path="res://Resources/Sprites/Attacks/Gaster Blaster/Fire2.png" id="6_g0f7r"]
[ext_resource type="Texture2D" uid="uid://uvutpkbqiypk" path="res://Resources/Sprites/Attacks/Gaster Blaster/Fire3.png" id="7_njko1"]
[ext_resource type="AudioStream" uid="uid://dts173ggqxweu" path="res://Resources/Sounds/GasterBlaster.ogg" id="8_m6li3"]
[ext_resource type="Texture2D" uid="uid://cewsncbg82y4l" path="res://Resources/Sprites/Attacks/Gaster Blaster/Fire4.png" id="8_qrbuu"]
[ext_resource type="AudioStream" uid="uid://ddavk0kt1f47e" path="res://Resources/Sounds/GasterBlast.ogg" id="9_xb8ny"]
[ext_resource type="AudioStream" uid="uid://digvkwlbuiidf" path="res://Resources/Sounds/GasterBlast2.ogg" id="10_edta7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2yo2r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_mfxnm")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_3y8f7")
}, {
"duration": 1.0,
"texture": ExtResource("5_2rrxl")
}, {
"duration": 1.0,
"texture": ExtResource("6_g0f7r")
}, {
"duration": 1.0,
"texture": ExtResource("7_njko1")
}, {
"duration": 1.0,
"texture": ExtResource("8_qrbuu")
}],
"loop": true,
"name": &"fire",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yetjb"]
size = Vector2(5000, 18)

[sub_resource type="Gradient" id="Gradient_bbpdk"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_yd0ay"]
gradient = SubResource("Gradient_bbpdk")
width = 1

[sub_resource type="Gradient" id="Gradient_frcsk"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_f5gr8"]
gradient = SubResource("Gradient_frcsk")
width = 1

[node name="Gaster Blaster" type="Node2D" node_paths=PackedStringArray("BlasterSprite", "Blast", "SGasterBlaster", "SGasterBlast", "SGasterBlast2", "Hitbox")]
scale = Vector2(3, 3)
script = ExtResource("2_fmef2")
BlasterSprite = NodePath("AnimatedSprite2D")
Blast = NodePath("Blast")
SGasterBlaster = NodePath("GasterBlaster")
SGasterBlast = NodePath("GasterBlast")
SGasterBlast2 = NodePath("GasterBlast2")
Hitbox = NodePath("Area2D")
Damage = 1
Karma = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2yo2r")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="AnimatedSprite2D"]
position = Vector2(6.5, -1.19209e-07)
scale = Vector2(3.41667, 2)

[node name="Area2D" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
z_index = 1
position = Vector2(2535, 0)
shape = SubResource("RectangleShape2D_yetjb")

[node name="Blast" type="Node2D" parent="."]
visible = false

[node name="Blast1" type="Sprite2D" parent="Blast"]
position = Vector2(25, -11.25)
scale = Vector2(5, 22.5)
texture = SubResource("GradientTexture1D_yd0ay")
centered = false

[node name="Blast2" type="Sprite2D" parent="Blast"]
position = Vector2(30, -13.75)
scale = Vector2(5, 27.5)
texture = SubResource("GradientTexture1D_f5gr8")
centered = false

[node name="Blast3" type="Sprite2D" parent="Blast"]
position = Vector2(35, -16.5)
scale = Vector2(5000, 33)
texture = SubResource("GradientTexture1D_f5gr8")
centered = false

[node name="GasterBlaster" type="AudioStreamPlayer" parent="." groups=["SoundEffects"]]
stream = ExtResource("8_m6li3")
bus = &"SoundEffects"

[node name="GasterBlast" type="AudioStreamPlayer" parent="." groups=["SoundEffects"]]
stream = ExtResource("9_xb8ny")
bus = &"SoundEffects"

[node name="GasterBlast2" type="AudioStreamPlayer" parent="." groups=["SoundEffects"]]
stream = ExtResource("10_edta7")
bus = &"SoundEffects"

[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="screen_entered" from="AnimatedSprite2D/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="AnimatedSprite2D/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_body_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_body_exited"]
